# transformers-en-ko-dataset-harness

./: .gitignore  AGENTS.md  Makefile  README.en.md  README.ko.md  README.md  pyproject.toml
.codex/: hooks.json
.codex/hooks/: common.py  post_tool_use_review.py  pre_tool_use_policy.py  session_start.py  stop_summary.py
data/: blacklist.txt  transformers_en_ko_clean_suspects.csv  transformers_en_ko_docs.jsonl  transformers_en_ko_eval_contaminated.jsonl  transformers_en_ko_pairs.jsonl  transformers_en_ko_rejected_docs.json  transformers_en_ko_rejected_pairs.jsonl  transformers_en_ko_train_clean.jsonl  transformers_en_ko_train_final.jsonl  transformers_en_ko_train_split.jsonl  transformers_en_ko_validation_clean.jsonl
data/review/: clean_suspect_review.md  eval_contaminated_review.md  train_clean_review.md  (+1 more)
docs/: translation_dataset_harness.md
hf_dataset_repo/: AGENTS.md  README.md
scripts/: __init__.py  build_alignment_review.py  build_clean_suspects.py  build_hf_dataset_repo.py  build_suspect_review.py  build_translation_corpus.py  filter_blacklist_pairs.py  prepare_translation_dataset.py  repo_sync.py  report_rejected_pairs.py  split_train_validation.py  split_translation_dataset.py  train_translation_model.py  upload_hf_dataset.py
tests/: test_build_alignment_review.py  test_build_clean_suspects.py  test_build_hf_dataset_repo.py  test_build_suspect_review.py  test_filter_blacklist_pairs.py  test_prepare_translation_dataset.py  test_report_rejected_pairs.py  test_split_train_validation.py  test_split_translation_dataset.py  test_translation_corpus.py
(+6 files in other folders)
